--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
     "require-dev": {
         "phpstan/phpstan": "^2.0",
         "pestphp/pest": "^3.7",
-        "phpbench/phpbench": "^1.3"
+        "phpbench/phpbench": "^1.3",
+        "pestphp/pest-plugin-type-coverage": "^3.2"
     },
     "autoload": {
         "psr-4": {
